<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:gravity="center"
            android:paddingTop="25dp"
            android:text="@string/app_name"
            android:paddingBottom="32dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/email_photo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:paddingBottom="8dp"
                android:src="@drawable/email_50" />

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                float:fletPadding="5dp">

                <EditText
                    android:id="@+id/email_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/password_photo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:paddingBottom="8dp"
                android:src="@drawable/password_50" />

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                float:fletPadding="5dp">

                <EditText
                    android:id="@+id/password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password" />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        </LinearLayout>

        <com.rey.material.widget.CheckBox
            android:id="@+id/switch_newuser"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:checked="true"
            android:gravity="center_vertical"
            app:v_styleId="@array/checkbox"/>


        <com.rey.material.widget.Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:v_styleId="@array/button_raise_wave"
            android:text="@string/sign_in"/>

    </LinearLayout>
</RelativeLayout>
